Updated for iOS Location Usage
Te actualizo el único permiso que te falta :)

--- a/DemoDS/DemoDS.iOS/Info.plist
+++ b/DemoDS/DemoDS.iOS/Info.plist
@@ -34,5 +34,7 @@
     <string>DemoDS</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+	<string>Finding the Address</string>
 </dict>
 </plist>
